// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcMainContainer should not display the titleIntro when title is not given 1`] = `
<div
  class="ec-main-container"
>
  <!---->
   
</div>
`;

exports[`EcMainContainer should render both titles when they are given in props 1`] = `
<div
  class="ec-main-container"
>
  <div
    class="tw-grid"
  >
    <div
      class="tw-col-full"
    >
      <h1
        class="ec-main-container__title"
      >
        Trade Finance
      </h1>
       
      <p
        class="ec-main-container__title-intro"
      >
        Here you will be able to keep track of all your requests to Ebury and of your credit line.
      </p>
    </div>
     
    <!---->
  </div>
   
</div>
`;

exports[`EcMainContainer should render empty if no props were given 1`] = `
<div
  class="ec-main-container"
>
  <!---->
   
</div>
`;

exports[`EcMainContainer should use given slot 1`] = `
<div
  class="ec-main-container"
>
  <div
    class="tw-grid"
  >
    <div
      class="tw-col-full"
    >
      <h1
        class="ec-main-container__title"
      >
        Trade Finance
      </h1>
       
      <p
        class="ec-main-container__title-intro"
      >
        Here you will be able to keep track of all your requests to Ebury and of your credit line.
      </p>
    </div>
     
    <!---->
  </div>
   
  <p>
    Random text
  </p>
</div>
`;

exports[`EcMainContainer should use the given named cta slot 1`] = `
<div
  class="ec-main-container"
>
  <div
    class="tw-grid"
  >
    <div
      class="tw-col-full sm:tw-col-9"
    >
      <h1
        class="ec-main-container__title"
      >
        Trade Finance
      </h1>
       
      <p
        class="ec-main-container__title-intro"
      >
        Here you will be able to keep track of all your requests to Ebury and of your credit line.
      </p>
    </div>
     
    <div
      class="tw-col-full sm:tw-col-3"
    >
      <button
        class="ec-btn ec-btn--rounded ec-btn--primary ec-btn--md ec-btn--full-width"
      >
        Test cta
      </button>
    </div>
  </div>
   
</div>
`;
